fix double borders

--- a/src/styles/CollapsedForm.css
+++ b/src/styles/CollapsedForm.css
@@ -2,12 +2,16 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  outline: 5px solid rgb(243, 244, 246);
   border: none;
+  border-top: 5px solid rgb(243, 244, 246);
   padding: 16px 24px;
   width: 100%;
   height: 69px;
   background-color: white;
+}
+
+.collapsed-form:last-child {
+  border-bottom: 5px solid rgb(243, 244, 246);
 }
 
 .collapsed-form-title {
